--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,13 @@ dist
 
 # TernJS port file
 .tern-port
+
+yarn-error.log
+/.yarnclean
+/target/
+**/coverage/**
+/work/
+.npmrc
+.idea
+.iml
+.vscode/
