fix: correct the release directory

--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -39,4 +39,6 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{secrets.LIFEOMIC_NPM_TOKEN}}
           PR_TAG: pr-${{ github.event.number }}
-        run: npm publish --tag "${PR_TAG}"
+        run: |
+          yarn build
+          npm publish ./dist/ --tag "${PR_TAG}" 
