--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,4 +23,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{secrets.LIFEOMIC_NPM_TOKEN}}
-        run: npx semantic-release
+        run: |
+          yarn build
+          npx semantic-release
