--- a/.releaserc.json
+++ b/.releaserc.json
@@ -2,7 +2,7 @@
   "branches": ["master"],
   "plugins": [
     ["@semantic-release/commit-analyzer", { "preset": "conventionalcommits" }],
-    ["@semantic-release/npm"],
+    ["@semantic-release/npm", { "pkgRoot": "dist/" }],
     [
       "@semantic-release/github",
       {
