--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-eslint": "^7.0.0",
     "eslint-plugin-eslint-plugin": "^3.4.0",
     "eslint-plugin-node": "^11.1.0",
+    "jest": "^27.0.6",
     "semantic-release": "^17.4.4"
   },
   "peerDependencies": {
