--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@typescript-eslint/parser": "^4.29.3",
     "eslint-plugin-jest": "^24.4.0",
     "eslint-plugin-jsdoc": "^36.0.8",
-    "eslint-plugin-prefer-arrow": "^1.2.3"
+    "eslint-plugin-lodash": "^7.3.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-security": "^1.4.0"
   }
 }
