--- a/package.json
+++ b/package.json
@@ -12,17 +12,24 @@
     "node": ">=12"
   },
   "scripts": {
-    "test": "eslint .",
-    "build": "sh ./build.sh"
+    "lint": "eslint",
+    "test": "jest",
+    "build": "node ./build.js"
   },
   "devDependencies": {
+    "@lifeomic/jest-config": "^1.0.1",
+    "@lifeomic/typescript-config": "^1.0.0",
+    "@types/eslint": "^7.28.1",
+    "@types/jest": "^27.0.2",
     "conventional-changelog-conventionalcommits": "^4.6.0",
     "eslint": "^7.32.0",
     "eslint-config-eslint": "^7.0.0",
     "eslint-plugin-eslint-plugin": "^3.5.3",
     "eslint-plugin-node": "^11.1.0",
-    "jest": "^27.1.0",
-    "semantic-release": "^17.4.7"
+    "jest": "^27.3.0",
+    "semantic-release": "^17.4.7",
+    "ts-jest": "^27.0.7",
+    "typescript": "^4.4.4"
   },
   "peerDependencies": {
     "eslint": ">=7"
