--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "semantic-release": "^17.4.7"
   },
   "peerDependencies": {
-    "eslint": ">=7"
+    "eslint": "7.x || 8.x"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.29.3",
