--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lifeomic/eslint-config",
+  "name": "@lifeomic/eslint-config-standards",
   "version": "0.0.0",
   "main": "index.js",
   "repository": {},
@@ -9,7 +9,7 @@
     "access": "public"
   },
   "engines": {
-    "node": ">=14.17"
+    "node": ">=12"
   },
   "scripts": {
     "test": "eslint .",
@@ -22,7 +22,7 @@
     "eslint-plugin-eslint-plugin": "^4.0.1",
     "eslint-plugin-node": "^11.1.0",
     "jest": "^27.3.1",
-    "semantic-release": "^18.0.0"
+    "semantic-release": "^17.4.7"
   },
   "peerDependencies": {
     "eslint": "^8"
