--- a/package.json
+++ b/package.json
@@ -16,22 +16,22 @@
     "build": "sh ./build.sh"
   },
   "devDependencies": {
-    "conventional-changelog-conventionalcommits": "^4.6.1",
-    "eslint": "^8.6.0",
+    "conventional-changelog-conventionalcommits": "^5.0.0",
+    "eslint": "^8.18.0",
     "eslint-config-eslint": "^7.0.0",
-    "eslint-plugin-eslint-plugin": "^4.1.0",
+    "eslint-plugin-eslint-plugin": "^4.3.0",
     "eslint-plugin-node": "^11.1.0",
-    "jest": "^27.4.7",
-    "semantic-release": "^17.4.7"
+    "jest": "^28.1.2",
+    "semantic-release": "19.0.3"
   },
   "peerDependencies": {
     "eslint": "^8"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.9.0",
-    "@typescript-eslint/parser": "^5.9.0",
-    "eslint-plugin-jest": "^25.3.4",
-    "eslint-plugin-jsdoc": "^37.5.1",
+    "@typescript-eslint/eslint-plugin": "^5.30.0",
+    "@typescript-eslint/parser": "^5.30.0",
+    "eslint-plugin-jest": "^26.5.3",
+    "eslint-plugin-jsdoc": "^39.3.3",
     "eslint-plugin-prefer-arrow": "^1.2.3"
   }
 }
