--- a/package.json
+++ b/package.json
@@ -17,21 +17,21 @@
   },
   "devDependencies": {
     "conventional-changelog-conventionalcommits": "^5.0.0",
-    "eslint": "^8.18.0",
+    "eslint": "^8.30.0",
     "eslint-config-eslint": "^7.0.0",
-    "eslint-plugin-eslint-plugin": "^4.3.0",
+    "eslint-plugin-eslint-plugin": "^5.0.7",
     "eslint-plugin-node": "^11.1.0",
-    "jest": "^28.1.2",
-    "semantic-release": "19.0.3"
+    "jest": "^29.3.1",
+    "semantic-release": "^19.0.5"
   },
   "peerDependencies": {
     "eslint": "^8"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.30.0",
-    "@typescript-eslint/parser": "^5.30.0",
-    "eslint-plugin-jest": "^26.5.3",
-    "eslint-plugin-jsdoc": "^39.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
+    "eslint-plugin-jest": "^27.1.7",
+    "eslint-plugin-jsdoc": "^39.6.4",
     "eslint-plugin-prefer-arrow": "^1.2.3"
   }
 }
