--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -5,15 +5,11 @@ on: pull_request
 jobs:
   test:
     runs-on: ubuntu-latest
-    name: Node.JS ${{ matrix.node-version }}
-    strategy:
-      matrix:
-        node-version: [16.x, 18.x]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 18
           cache: "yarn"
       - name: Install
         run: yarn install
