--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-jsdoc": "^46.4.4",
     "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-8a03594-20241020",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0"
   }
 }
