--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "eslint-plugin-node": "^11.1.0",
     "jest": "^29.6.1",
     "semantic-release": "^21.0.7",
-    "typescript": "^5.1.6"
+    "typescript": "5.9.3"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
+    "@typescript-eslint/eslint-plugin": "8.46.4",
+    "@typescript-eslint/parser": "8.46.4",
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-jsdoc": "^46.4.4",
     "eslint-plugin-prefer-arrow": "^1.2.3",
