--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "build": "sh ./build.sh"
   },
   "devDependencies": {
-    "@lifeomic/typescript-config": "^3.0.0",
+    "@lifeomic/typescript-config": "^3.1.0",
     "conventional-changelog-conventionalcommits": "^6.1.0",
     "eslint": "^8",
     "eslint-config-eslint": "^8.0.0",
     "eslint-plugin-eslint-plugin": "^5.1.1",
     "eslint-plugin-node": "^11.1.0",
     "jest": "^29.6.1",
+    "react": "^19.2.0",
     "semantic-release": "^21.0.7",
     "typescript": "5.9.3"
   },
